--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
         <h1>Il mio viaggio a Londra</h1>
         <section>
             <!-- img -->
+            <img src="img/bill1.jpg" alt="">
+            <img src="img/bill2.jpg" alt="">
+            <img src="img/bill3.jpg" alt="">
         </section>
     </header>
 <hr>
     <main>
         <section>
+            <h3>Le mie spese</h3>
             <!-- spese -->
         </section>
         <section>
