--- a/index.html
+++ b/index.html
@@ -21,13 +21,48 @@
     <main>
         <section>
             <h3>Le mie spese</h3>
+            <table>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&#8364</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&#8364</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&#8364</td>
+                </tr>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360&#8364</td>
+                </tr>
+            </table>
             <!-- spese -->
         </section>
+        <hr>
         <section>
-            <!-- todo -->
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#215;</li>
+                <li>Visitare Greenwich &#10003;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#215;</li>
+            </ul>
         </section>
         <section>
             <!-- info -->
+            <h3>Info</h3>
         </section>
     </main>
 <br>
