--- a/index.html
+++ b/index.html
@@ -60,13 +60,35 @@
                 <li>Mangiare il tipico Fish and Chips inglese &#215;</li>
             </ul>
         </section>
+        <hr>
         <section>
+            <h3>Info utili:</h3>
+            <ol>
+                <li>Numeri utili di emergenza</li>
+                    <ul>
+                        <li><strong>999</strong>- Emergenza</li>
+                        <li><strong>101</strong>- Numero di Polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
+                <li>Hotel</li>
+                    <ul>
+                        <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo Hotel:</strong>Westminister, London, Regno Unito</li>
+                    </ul>
+                <li>Aereo</li>
+                    <ul>
+                        <li><strong>Volo di Andata:</strong> Y12837X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno:</strong>Y47362X, ORE 18.30 da London Heathrow</li>
+                    </ul>
+                
+            </ol>
             <!-- info -->
-            <h3>Info</h3>
+            
         </section>
     </main>
 <br>
     <footer>
+        <strong>Le Foto</strong>
         <!-- foto -->
     </footer>
 </body>
